<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_main_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="체중"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edittextview_main_weight"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittextview_main_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textview_main_weight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_main_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="신장"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edittextview_main_height"
        app:layout_constraintTop_toBottomOf="@id/textview_main_weight"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/edittextview_main_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textview_main_height"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittextview_main_weight"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="BM계산하기"
        android:textSize="20dp"
        android:id="@+id/button_main_calculatebmi"
        app:layout_constraintTop_toBottomOf="@+id/edittextview_main_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.9"/>


</androidx.constraintlayout.widget.ConstraintLayout>
