...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="70.000"
        android:id="@+id/textview_result_bmivalue"
        app:layout_constraintTop_toTopOf="@+id/textview_result_labelforbmiresult"
        app:layout_constraintBottom_toBottomOf="@id/textview_result_labelforbmiresult"
        app:layout_constraintLeft_toRightOf="@+id/textview_result_labelforbmiresult"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"/>
...
